# related_party_board

./: README.md  main.py  pyproject.toml  配色方案.md
static/: fonts.css  index.html
